--- a/src/assets/scss/setting/_vars.scss
+++ b/src/assets/scss/setting/_vars.scss
@@ -4,8 +4,8 @@
   
     --black: #000;
     --black100: #000;
-    --black200: #000;
-    --black300: #000;
+    --black200: #111;
+    --black300: #222;
     --black400: #000;
     --black500: #000;
     
@@ -16,6 +16,8 @@
     --white400: #fff;
     --white500: #fff;
     
+    --red: #f00;
+     
     // 폰트 셋팅
     font-family: var(--mainfont-nanum), var(--mainfont-nexon);
     font-size: 16px;
